# rumoc

./: Cargo.toml
src/: main.rs  summarizer.rs
src/test/: test_chinese.txt  test_english.txt
